models/qwen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwen
  namespace: llama-serve
  labels:
    app: qwen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qwen
  template:
    metadata:
      labels:
        app: qwen
    spec:
      containers:
        - name: qwen
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.2.0-1754088865-hotfix-1'
          imagePullPolicy: IfNotPresent
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--model=/mnt/models'
            - '--served-model-name=qwen'
            - '--tensor-parallel-size=2'
            - '--max-model-len=120000'
            - '--gpu-memory-utilization=0.9'
            - '--enable-auto-tool-choice'
            - '--tool-call-parser'
            - hermes
          resources:
            limits:
              cpu: '10'
              memory: 32Gi
              nvidia.com/gpu: '2'
            requests:
              cpu: '2'
              memory: 6Gi
              nvidia.com/gpu: '2'
          volumeMounts:
            - name: cache-volume
              mountPath: /mnt/models
              subPath: Qwen3-32B-FP8-dynamic
            - name: shm
              mountPath: /dev/shm 
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: qwen
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
      restartPolicy: Always
